...
            android:id="@+id/btnUpdateUser"
            android:onClick="onUpdateUserClicked"/>

    </RelativeLayout>

    <Switch
        android:id="@+id/directionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:onClick="onSwitchClicked"
        android:paddingHorizontal="10dp"
        android:text="Brief"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/directionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Directions!"
        android:textSize="30sp"
        android:gravity="center"/>
...
        android:text=""
        android:textSize="30sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btmNavi"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        app:itemBackground="@color/teal_700"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"/>

...
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="onSkipButtonClicked"
            android:text="Skip"/>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="onNextButtonClicked"
            android:text="Next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/nextExhibit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
