...
        android:id="@+id/tvName"
        android:text="Monkey"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvName"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:text="Add"
        android:textSize="18sp" />

</RelativeLayout>
