...


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/searchView"/>

    <ListView
        android:id="@+id/lvResults"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btmNavi"
        android:layout_below="@id/searchView"
        android:padding="10dp" />
...
